--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -66,8 +66,8 @@ jobs:
         path: deployment-package.zip
 
   # 두 번째 Job: zip 파일 S3 로 업로드하는 단계
-  s3-upload:
-    # "s3-upload" Job은 "build" Job이 완료된 후 실행됨
+  deploy:
+    # "deploy" Job은 "build" Job이 완료된 후 실행됨
     needs: build
     # 실행 환경으로 최신 Ubuntu 사용
     runs-on: ubuntu-latest
@@ -88,8 +88,8 @@ jobs:
           aws-region: ap-northeast-2
 
       # Step 3: S3로 ZIP 파일 업로드
-      - name: Upload JAR to S3
-        run: aws s3 cp package/deployment-package.zip s3://${{ secrets.S3_BUCKET_NAME }}/deploy/deployment-package.zip
+      - name: Upload ZIP to S3
+        run: aws s3 cp deployment-package s3://${{ secrets.S3_BUCKET_NAME }}/deploy/deployment-package
 
       # Step 4: CodeDeploy를 이용해 S3에 있는 JAR 파일을 EC2에 배포
       - name: Deploy to EC2 using CodeDeploy
