--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Upload ZIP to S3
         run: aws s3 cp deployment-package.zip s3://${{ secrets.S3_BUCKET_NAME }}/deploy/deployment-package.zip
 
-      # Step 4: CodeDeploy를 이용해 S3에 있는 JAR 파일을 EC2에 배포
+      # Step 4: CodeDeploy를 이용해 S3에 있는 ZIP 파일을 EC2에 배포
       - name: Deploy to EC2 using CodeDeploy
         run: |
           aws deploy create-deployment \
