--- a/deployment/appspec.yml
+++ b/deployment/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: __JAR_FILE_NAME__
+  - source: studyspring-0.0.1-SNAPSHOT.jar
     destination: /home/ubuntu/app
 hooks:
   ApplicationStop:
